miscellaneous spec fixes

--- a/fpga/radiant_project/lab2_ja/work/@_opt1/_viscom/.env_list_file
+++ b/fpga/radiant_project/lab2_ja/work/@_opt1/_viscom/.env_list_file
@@ -33,6 +33,7 @@ OnlineServices=Online Services
 OS=Windows_NT
 PATH=C:/lscc/radiant/2024.1/questasim/win64;;C:/lscc/radiant/2024.1/questasim/win64;;C:/lscc/radiant/2024.1/questasim/win64;C:/lscc/radiant/2024.1/ispfpga/bin/nt64;C:/lscc/radiant/2024.1/ispfpga/bin/nt64;C:/lscc/radiant/2024.1/ispfpga/bin/nt64;C:/lscc/radiant/2024.1/ispfpga/bin/nt64;C:/lscc/radiant/2024.1/ispfpga/bin/nt64;C:/lscc/radiant/2024.1/bin/nt64;C:/lscc/radiant/2024.1/ispfpga/bin/nt64;C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;C:\WINDOWS\system32;C:\WINDOWS;C:\WINDOWS\System32\Wbem;C:\WINDOWS\System32\WindowsPowerShell\v1.0\;C:\WINDOWS\System32\OpenSSH\;C:\Program Files (x86)\Windows Kits\8.1\Windows Performance Toolkit\;C:\Program Files\Docker\Docker\resources\bin;C:\Program Files\MATLAB\R2023b\bin;C:\Program Files\Git\cmd;C:\Program Files\HP\HP One Agent;C:\Program Files\nodejs\;C:\Users\josep\AppData\Local\Programs\Quarto\bin;C:\Users\josep\AppData\Local\Programs\Python\Python310\Scripts\;C:\Users\josep\AppData\Local\Programs\Python\Python310\;C:\Users\josep\AppData\Local\Microsoft\WindowsApps;C:\Users\josep\AppData\Local\Programs\Microsoft VS Code\bin;C:\Users\josep\AppData\Local\GitHubDesktop\bin;C:\intelFPGA\20.1\modelsim_ase\win32aloem;C:\Users\josep\AppData\Roaming\npm
 PATHEXT=.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC
+PKV_OPEN_ENV=1
 platformcode=KV
 PROCESSOR_ARCHITECTURE=AMD64
 PROCESSOR_IDENTIFIER=Intel64 Family 6 Model 140 Stepping 1, GenuineIntel
